--- a/microestc.aspnetcore.drawing/Dockerfile
+++ b/microestc.aspnetcore.drawing/Dockerfile
@@ -10,4 +10,5 @@ deb http://mirrors.aliyun.com/debian/ stretch-backports main non-free contrib \
 deb-src http://mirrors.aliyun.com/debian/ stretch-backports main non-free contrib" > /etc/apt/sources.list
 RUN apt-get update && apt-get install libgdiplus -y && apt-get install ttf-mscorefonts-installer -y \
 && apt-get install fontconfig -y && fc-cache -f -v && ln -s libgdiplus.so gdiplus.dll \
-&& ln -s /lib/x86_64-linux-gnu/libdl-2.24.so /lib/x86_64-linux-gnu/libdl.so
+&& ln -s /lib/x86_64-linux-gnu/libdl-2.24.so /lib/x86_64-linux-gnu/libdl.so && apt-get install imagemagick -y
+CMD ["/bin/bash"]
